k8s/test/postgres-test-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-test
  namespace: dietiestate25-test
spec:
  selector:
    app: postgres-test
  ports:
    - port: 5432
      targetPort: 5432
  type: ClusterIP
